# enhanced-contract-analysis

./: README.md  crew-testing.ipynb  pyproject.toml  requirements.txt
src/contract_analysis/: crew.py  main.py  models.py  services.py
src/contract_analysis/config/: agents.yaml  tasks.yaml
